--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -62,6 +62,7 @@
     <Compile Include="src\concrete\SynchronizeInvoke.cs" />
     <Compile Include="src\patching\mPatching.cs" />
     <Compile Include="src\UI\abstract\IMeshRenderer.cs" />
+    <Compile Include="src\UI\abstract\IDimensions.cs" />
     <Compile Include="src\UI\abstract\IUIButton.cs" />
     <Compile Include="src\UI\abstract\IUIClickable.cs" />
     <Compile Include="src\UI\abstract\IView.cs" />
@@ -88,6 +89,7 @@
     <Compile Include="src\saves\SaveableFieldsHelper.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
     <Compile Include="src\UI\animations\UIBezierCubicAnimation.cs" />
+    <Compile Include="src\UI\components\abstract\UIClickable.cs" />
     <Compile Include="src\UI\components\PageSlider\UIBasePageSlider.cs" />
     <Compile Include="src\UI\components\PageSlider\UIHorizontalPageSlider.cs" />
     <Compile Include="src\UI\components\PageSlider\UIVerticalPageSlider.cs" />
@@ -97,9 +99,12 @@
     <Compile Include="src\UI\components\Slider\UIBaseSlider.cs" />
     <Compile Include="src\UI\components\Slider\UIHorizontalSlider.cs" />
     <Compile Include="src\UI\components\Slider\UIVerticalSlider.cs" />
+    <Compile Include="src\UI\extensions\AnimationsExtensions.cs" />
+    <Compile Include="src\UI\extensions\ComponentsExtensions.cs" />
+    <Compile Include="src\UI\UIAnchor.cs" />
     <Compile Include="src\UI\components\UIJoystick.cs" />
     <Compile Include="src\UI\components\UISwitch.cs" />
-    <Compile Include="src\UI\extensions\UIObjectExtension.cs" />
+    <Compile Include="src\UI\extensions\UIExtensions.cs" />
     <Compile Include="src\extensions\VectorExtension.cs" />
     <Compile Include="src\game_events\Event.cs" />
     <Compile Include="src\game_events\mGameEvents.cs" />
@@ -114,19 +119,22 @@
     <Compile Include="src\UI\components\UIContainer.cs" />
     <Compile Include="src\UI\components\UIMesh.cs" />
     <Compile Include="src\UI\components\UITextBox.cs" />
-    <Compile Include="src\UI\extensions\ViewExtensions.cs" />
-    <Compile Include="src\UI\layouts\LayoutElemsDirection.cs" />
+    <Compile Include="src\UI\extensions\ViewsExtensions.cs" />
+    <Compile Include="src\UI\layouts\StackLayout.cs" />
+    <Compile Include="src\UI\layouts\FlexDirection.cs" />
+    <Compile Include="src\UI\layouts\UILayout.cs" />
     <Compile Include="src\UI\UIFont.cs" />
+    <Compile Include="src\UI\UIPadding.cs" />
+    <Compile Include="src\UI\UIPos.cs" />
     <Compile Include="src\UI\UIStencilMaterials.cs" />
     <Compile Include="src\UI\UIEventHandler.cs" />
     <Compile Include="src\concrete\UnidirectionalList.cs" />
     <Compile Include="src\concrete\RectangleArea2D.cs" />
     <Compile Include="src\events\EventListener.cs" />
     <Compile Include="src\events\EventsController.cs" />
-    <Compile Include="src\events\MouseEventListener.cs" />
     <Compile Include="src\events\TouchEvent.cs" />
     <Compile Include="src\extensions\SpriteExtension.cs" />
-    <Compile Include="src\extensions\GameObjectExtension.cs" />
+    <Compile Include="src\extensions\TransformExtension.cs" />
     <Compile Include="src\events\KeyboardEvent.cs" />
     <Compile Include="src\mBehaviour.cs" />
     <Compile Include="src\mCore.cs" />
@@ -144,7 +152,7 @@
     <Compile Include="src\UI\components\UIRadioGroup.cs" />
     <Compile Include="src\UI\components\UISprite.cs" />
     <Compile Include="src\UI\components\UIToggle.cs" />
-    <Compile Include="src\UI\UIClickable.cs" />
+    <Compile Include="src\UI\UIClickableOld.cs" />
     <Compile Include="src\UI\UIColor.cs" />
     <Compile Include="src\UI\UIObject.cs" />
     <Compile Include="src\UI\UIObjectOrientation.cs" />
