[WIP] UISprite, UIButton, ui clickables refactoring, ...

--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -37,6 +37,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Design" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Security" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
@@ -58,20 +59,20 @@
     <Compile Include="src\abstract\IKeyValueStorage.cs" />
     <Compile Include="src\abstract\ISaveableFieldBridge.cs" />
     <Compile Include="src\abstract\ISaveableFields.cs" />
-    <Compile Include="src\concrete\CircleArea2D.cs" />
+    <Compile Include="src\concrete\AreaShape.cs" />
     <Compile Include="src\concrete\SynchronizeInvoke.cs" />
     <Compile Include="src\patching\mPatching.cs" />
-    <Compile Include="src\UI\abstract\IMeshRenderer.cs" />
-    <Compile Include="src\UI\abstract\IDimensions.cs" />
-    <Compile Include="src\UI\abstract\IUIButton.cs" />
-    <Compile Include="src\UI\abstract\IUIClickable.cs" />
-    <Compile Include="src\UI\abstract\IView.cs" />
+    <Compile Include="src\UI\interfaces\IAreaChecker.cs" />
+    <Compile Include="src\UI\interfaces\IMeshRenderer.cs" />
+    <Compile Include="src\UI\interfaces\IDimensions.cs" />
+    <Compile Include="src\UI\interfaces\IUIClickable.cs" />
+    <Compile Include="src\UI\interfaces\IUIDragable.cs" />
+    <Compile Include="src\UI\interfaces\IView.cs" />
     <Compile Include="src\achievements\mAchievements.cs" />
     <Compile Include="src\analytics\AnalyticsEvents.cs" />
     <Compile Include="src\analytics\AnalyticsHelper.cs" />
     <Compile Include="src\analytics\AnalyticsStats.cs" />
     <Compile Include="src\analytics\mAnalytics.cs" />
-    <Compile Include="src\concrete\Area2D.cs" />
     <Compile Include="src\concrete\AES.cs" />
     <Compile Include="src\concrete\B64X.cs" />
     <Compile Include="src\concrete\BezierHelper.cs" />
@@ -89,7 +90,6 @@
     <Compile Include="src\saves\SaveableFieldsHelper.cs" />
     <Compile Include="src\concrete\TimerAction.cs" />
     <Compile Include="src\UI\animations\UIBezierCubicAnimation.cs" />
-    <Compile Include="src\UI\components\abstract\UIClickable.cs" />
     <Compile Include="src\UI\components\PageSlider\UIBasePageSlider.cs" />
     <Compile Include="src\UI\components\PageSlider\UIHorizontalPageSlider.cs" />
     <Compile Include="src\UI\components\PageSlider\UIVerticalPageSlider.cs" />
@@ -101,6 +101,7 @@
     <Compile Include="src\UI\components\Slider\UIVerticalSlider.cs" />
     <Compile Include="src\UI\extensions\AnimationsExtensions.cs" />
     <Compile Include="src\UI\extensions\ComponentsExtensions.cs" />
+    <Compile Include="src\UI\RectangleAreaChecker.cs" />
     <Compile Include="src\UI\UIAnchor.cs" />
     <Compile Include="src\UI\components\UIJoystick.cs" />
     <Compile Include="src\UI\components\UISwitch.cs" />
@@ -109,11 +110,9 @@
     <Compile Include="src\game_events\Event.cs" />
     <Compile Include="src\game_events\mGameEvents.cs" />
     <Compile Include="src\remotesettings\mRemoteSettings.cs" />
-    <Compile Include="src\UI\abstract\IUIColored.cs" />
-    <Compile Include="src\UI\abstract\IUIObject.cs" />
-    <Compile Include="src\UI\abstract\IUIRenderer.cs" />
-    <Compile Include="src\UI\abstract\IUISpriteRenderer.cs" />
-    <Compile Include="src\UI\common\UISpriteRenderer.cs" />
+    <Compile Include="src\UI\interfaces\IUIColored.cs" />
+    <Compile Include="src\UI\interfaces\IUIObject.cs" />
+    <Compile Include="src\UI\interfaces\IUIRenderer.cs" />
     <Compile Include="src\UI\animations\UIBezierQuadraticAnimation.cs" />
     <Compile Include="src\UI\components\UIRectAreaButton.cs" />
     <Compile Include="src\UI\components\UIContainer.cs" />
@@ -123,14 +122,14 @@
     <Compile Include="src\UI\layouts\StackLayout.cs" />
     <Compile Include="src\UI\layouts\FlexDirection.cs" />
     <Compile Include="src\UI\layouts\UILayout.cs" />
+    <Compile Include="src\UI\UIClickablesHandler.cs" />
+    <Compile Include="src\UI\UIColor.cs" />
     <Compile Include="src\UI\UIFont.cs" />
     <Compile Include="src\UI\UIPadding.cs" />
     <Compile Include="src\UI\UIPos.cs" />
     <Compile Include="src\UI\UIStencilMaterials.cs" />
     <Compile Include="src\UI\UIEventHandler.cs" />
     <Compile Include="src\concrete\UnidirectionalList.cs" />
-    <Compile Include="src\concrete\RectangleArea2D.cs" />
-    <Compile Include="src\events\EventListener.cs" />
     <Compile Include="src\events\EventsController.cs" />
     <Compile Include="src\events\TouchEvent.cs" />
     <Compile Include="src\extensions\SpriteExtension.cs" />
@@ -152,8 +151,6 @@
     <Compile Include="src\UI\components\UIRadioGroup.cs" />
     <Compile Include="src\UI\components\UISprite.cs" />
     <Compile Include="src\UI\components\UIToggle.cs" />
-    <Compile Include="src\UI\UIClickableOld.cs" />
-    <Compile Include="src\UI\UIColor.cs" />
     <Compile Include="src\UI\UIObject.cs" />
     <Compile Include="src\UI\UIObjectOrientation.cs" />
     <Compile Include="src\UI\UIRect.cs" />
