Update easing functions

--- a/mFramework/mFramework.csproj
+++ b/mFramework/mFramework.csproj
@@ -60,6 +60,7 @@
     <Compile Include="src\abstract\ISaveableFieldBridge.cs" />
     <Compile Include="src\abstract\ISaveableFields.cs" />
     <Compile Include="src\concrete\AreaShape.cs" />
+    <Compile Include="src\concrete\Easings.cs" />
     <Compile Include="src\concrete\SynchronizeInvoke.cs" />
     <Compile Include="src\patching\mPatching.cs" />
     <Compile Include="src\UI\animations\LambdaAnimation.cs" />
